Allow promotion to test and prod
